--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,44 @@
 anyio==3.6.2
 astroid==2.7.3
 beautifulsoup4==4.11.2
+camel-converter==3.1.1
+certifi==2023.11.17
 charset-normalizer==3.0.1
 click==8.1.3
 fastapi==0.89.1
+filelock==3.13.1
+fsspec==2023.12.2
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+isort==5.13.2
+Jinja2==3.1.2
 lazy-object-proxy==1.6.0
+MarkupSafe==2.1.3
+mccabe==0.6.1
+meilisearch==0.28.4
+mpmath==1.3.0
+networkx==3.2.1
 numpy==1.24.1
 nvidia-cublas-cu11==11.10.3.66
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-nvrtc-cu12==12.1.105
 nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cuda-runtime-cu12==12.1.105
 nvidia-cudnn-cu11==8.5.0.96
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
 opencv-python==4.7.0.68
 Pillow==9.4.0
+platformdirs==4.1.0
 pydantic==1.10.4
 pylint==2.10.2
 python-dotenv==0.21.1
@@ -25,11 +49,15 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 starlette==0.22.0
-torch==1.13.1
-torchvision==0.14.1
+sympy==1.12
+toml==0.10.2
+torch==2.1.2
+torchvision==0.16.2
+triton==2.1.0
 typing_extensions==4.4.0
 urllib3==1.26.14
 uvicorn==0.20.0
 uvloop==0.17.0
 watchfiles==0.18.1
 websockets==10.4
+wrapt==1.12.1
