--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ Jinja2==3.1.2
 lazy-object-proxy==1.6.0
 MarkupSafe==2.1.3
 mccabe==0.6.1
-meilisearch==0.28.4
+meilisearch-python-sdk==2.4.0
 mpmath==1.3.0
 networkx==3.2.1
 numpy==1.24.1
