--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ camel-converter==3.1.1
 certifi==2023.11.17
 charset-normalizer==3.0.1
 click==8.1.3
+distro==1.9.0
 fastapi==0.89.1
 filelock==3.13.1
 fsspec==2023.12.2
 h11==0.14.0
+httpcore==1.0.2
 httptools==0.5.0
+httpx==0.26.0
 idna==3.4
 isort==5.13.2
 Jinja2==3.1.2
@@ -36,11 +39,14 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.18.1
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
+openai==1.6.1
 opencv-python==4.7.0.68
+packaging==23.2
 Pillow==9.4.0
 platformdirs==4.1.0
 pydantic==1.10.4
 pylint==2.10.2
+pytesseract==0.3.10
 python-dotenv==0.21.1
 python-multipart==0.0.5
 PyYAML==6.0
@@ -53,8 +59,9 @@ sympy==1.12
 toml==0.10.2
 torch==2.1.2
 torchvision==0.16.2
+tqdm==4.66.1
 triton==2.1.0
-typing_extensions==4.4.0
+typing_extensions==4.9.0
 urllib3==1.26.14
 uvicorn==0.20.0
 uvloop==0.17.0
